# system_programming_EX_3_B

./: CMakeLists.txt
sources/: Fraction.cpp  Fraction.hpp
